<resources>
    <string name="app_name">Psiquemap</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_minha_conta">MinhaConta</string>
    <string name="minha_conta">Minha conta</string>
    <string name="diario">Diário</string>
    <string name="questionario">Questionário</string>
    <string name="sintomas">Sintomas</string>
    <string name="feedback">Feedback</string>
    <string name="notificacoes">Notificações</string>
    <string name="title_activity_sintomas">Sintomas</string>
    <string name="title_activity_inicio_questionario">Inicio Questionario</string>
    <string name="title_activity_resposta_unica">Pergunta</string>
    <string name="title_activity_inicio_diario">Diario</string>
    <string name="title_activity_evento_do_diario">Eventos</string>
    <string name="title_activity_resposta_time">Pergunta</string>
    <string name="btnMedicacao">Medicação</string>
    <string name="title_activity_medicacao">Medicação</string>
    <string name="title_activity_detalhe_medicamento">Detalhes do Medicamento</string>
    <string name="txtMedicamento">Medicamento:</string>
    <string name="txtPosologia">Posologia:</string>
    <string name="txtDosagem">Dosagem:</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_resposta_null">RespostaNull</string>
    <string name="title_activity_visualizar_acontecimentos">VisualizarAcontecimentos</string>
    <string name="title_activity_detalhe_acontecimento">DetalheAcontecimento</string>
</resources>
