<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.psiquemap.psiquemap.MainActivity"
        tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearCabecalho"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo3" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearMinhaConta"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnMinhaConta"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_minha_conta"
                    android:background="@color/button_material_light"
                    android:onClick="chamarMinhaConta"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/minha_conta"
                    android:id="@+id/txtMinhaConta"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:gravity="fill_vertical"
                    android:onClick="chamarMinhaConta"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearDiario"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDiario"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_diario"
                    android:background="@color/button_material_light"
                    android:onClick="chamarDiario"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtDiario"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:gravity="fill_vertical"
                    android:text="@string/diario"
                    android:onClick="chamarDiario"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearQuestionario"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnQuestionario"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_questionario"
                    android:background="@color/button_material_light"
                    android:onClick="chamarQuestinario"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/questionario"
                    android:id="@+id/txtQuestionario"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:gravity="fill_vertical"
                    android:onClick="chamarQuestinario"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearSintomas"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnSintomas"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_sintomas"
                    android:background="@color/button_material_light"
                    android:onClick="chamarSintomas"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/sintomas"
                    android:id="@+id/txtSintomas"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:gravity="fill_vertical"
                    android:onClick="chamarSintomas"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearFeedback"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnFeedback"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_feedback"
                    android:background="@color/button_material_light"
                    android:onClick="chamarFeedback"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/feedback"
                    android:id="@+id/txtFeedback"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:gravity="fill_vertical"
                    android:onClick="chamarFeedback"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearNotificacoes"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnNotificacoes"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_notificacoes"
                    android:background="@color/button_material_light"
                    android:onClick="chamarMedicacao"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/btnMedicacao"
                    android:id="@+id/txtNotificacoes"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:background="@color/button_material_light"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:gravity="fill_vertical"
                    android:onClick="chamarMedicacao"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
